[project]
name = "image-processing-toolkits"
version = "0.1.0"
description = "MCP servers for weather, image processing and other tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.1",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pdf2image",
    "PyMuPDF>=1.23.0",
    "pptxtoimages",
    "moviepy",
    "openpyxl",
    "psutil"
]
